# is-unicode-supported

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: console.rs
src/: lib.rs
